--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,5 @@ install {
 }
 
 dependencies {
-    implementation 'com.b3dgs.lionengine:lionengine-core:9.0.5-SNAPSHOT'
+    implementation 'com.b3dgs.lionengine:lionengine-core:9.0.5'
 }
