--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,11 +53,11 @@ install {
     repositories.mavenInstaller {
         pom.project {
             artifactId 'lionengine-core-android'
-            version '9.0.5'
+            version '10.0.0-SNAPSHOT'
         }
     }
 }
 
 dependencies {
-    implementation 'com.b3dgs.lionengine:lionengine-core:9.0.5'
+    implementation 'com.b3dgs.lionengine:lionengine-core:10.0.0-SNAPSHOT'
 }
