#6: Pom updated with b3dgs parent 2.0.0-SNAPSHOT.
#5: License header date updated to 2021.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ install {
 }
 
 dependencies {
+    implementation 'com.b3dgs:b3dgs-parent:2.0.0-SNAPSHOT'
     implementation 'com.b3dgs.lionengine:lionengine-core:10.0.0-SNAPSHOT'
 }
